# ChangeLog for dev-haskell/glut
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-haskell/glut/ChangeLog,v 1.14 2012/06/02 12:17:28 gienah Exp $

*glut-2.3.0.0 (02 Jun 2012)

  02 Jun 2012; Mark Wright <gienah@gentoo.org> +glut-2.3.0.0.ebuild:
  Bump glut to 2.3.0.0, fixes bug #363979

  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> glut-2.1.1.1.ebuild,
  glut-2.1.1.2.ebuild:
  virtual/glu -> virtual/opengl

  16 Sep 2010; Tomáš Chvátal <scarabeus@gentoo.org> glut-2.1.1.1.ebuild,
  glut-2.1.1.2.ebuild:
  virtual/glut -> media-libs/glut

  24 Jul 2010; Sergei Trofimovich <slyfox@gentoo.org> -glut-2.0.ebuild,
  -glut-2.0-r1.ebuild, -glut-2.1.1.ebuild:
  Removed old versions.

*glut-2.1.1.2 (19 Apr 2009)

  19 Apr 2009; Lennart Kolmodin <kolmodin@gentoo.org> glut-2.1.1.ebuild,
  +glut-2.1.1.2.ebuild:
  Version bump and QA.

  03 Oct 2008; Ferris McCormick <fmccor@gentoo.org> glut-2.1.1.1.ebuild:
  Sparc stable --- Bug #230919 and Bug #239368.

  03 Oct 2008; Ferris McCormick <fmccor@gentoo.org> glut-2.1.1.1.ebuild:
  Sparc stable --- Bug #230919 and Bug #239368.

  06 Jul 2008; Markus Meier <maekke@gentoo.org> glut-2.1.1.1.ebuild:
  amd64/x86 stable, bug #230919

*glut-2.1.1.1 (20 Dec 2007)

  20 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> +glut-2.1.1.1.ebuild:
  New version. Released with ghc-6.8 but works with ghc-6.6.

  16 Dec 2007; Samuli Suominen <drac@gentoo.org> glut-2.1.1.ebuild:
  amd64 stable wrt #201984

  14 Dec 2007; Duncan Coutts <dcoutts@gentoo.org> glut-2.1.1.ebuild:
  Updates for upward compatability with cabal-1.2 and ghc-6.8

  12 Dec 2007; Ferris McCormick <fmccor@gentoo.org> glut-2.1.1.ebuild:
  Add ~sparc keyword (completeness with bug #201984)

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> glut-2.1.1.ebuild:
  quote variable

  12 Dec 2007; Christian Faulhammer <opfer@gentoo.org> glut-2.1.1.ebuild:
  stable x86, bug 201984

*glut-2.1.1 (09 Jul 2007)