@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX happy-1.18.6-man.patch 469 SHA256 7892274f9f0a8a0b884c4a80b852a7f41e43597efc3251613bdab36442dfd791 SHA512 1376e16e8c0bb6b9abca763bfbb8572d9640044a82aad951ff9d46dfb2436b6a95bded693696ab84e49fec1d259453444fcb36403db63d0c69f89a64bb3c4800 WHIRLPOOL 100abdf2fd341b7a3861305dc7d1608a9dca8819667579cb134a0f1e485f23501631cb1a7f9cc4c9b14b3b2a56ec22d837f8cdddb8e86f6b01a90ccf1446896c
 AUX happy-1.18.6-missing-tests.patch 4051 SHA256 ba9de7d686e05e070639303862869c70c08b6d1d4d6b89749fa972b86a4ada08 SHA512 f792fb513352ebf1f6634a0019de058ce91a57978b7e6dd6b4c94cc9d42dc09b51c23ea2bd6ad72b807d7dd64aa1b42348df217079216c2d5fc00f6750d381d8 WHIRLPOOL 4b58c08070e00c19f29271efcfd6b9b333b5b53296af89de1781ea6da3a9271553a5f2a75b5eaf762cab5f7010adebbac5cbf550260cb64d093cdd108653b980
 AUX happy-1.18.9-missing-tests.patch 5952 SHA256 165240b4862df981d8f96018d43bb9c3c651369cf4c4824d08b0cbbfb616da2a SHA512 cf8a9d725218eb9a0bfd5ace8701e8a67eef4c75bfce88bcf77ffb22a78fae31e53e27105bdec0c5ef3fce8fab005f8526cd1bb2a9f7f92031c6550816170959 WHIRLPOOL 4e44c9fa68374fa33ed282d37513f578c6f01f2b3bb6f1bf850eb8b2b46fac5b6511678189b37ec103e9d8ac87f0d6e064cfb42850dcc11ed6f00db61c099263
@@ -9,6 +12,23 @@ DIST mtl-1.1.0.2.tar.gz 18901 SHA256 a225aaf2b1e337f40c31e5c42f95eec9a4608322b0e
 EBUILD happy-1.18.2.ebuild 967 SHA256 0c3a84a5f9f7580540f894351a8d295311d98c64bceb625521d1ddfa999edde4 SHA512 f4a1b293871c898416c4d72861d58cbbd0466ea866cfdbbc6687cf857f636970f85c3c2641af08b8b274fe79b8d19f2b64d277b65c434faf62db87bb612cc1e9 WHIRLPOOL 80902ef3bc38995014ddd52129221f405d60bf23ec3665eedbd3b8d82ed78510a50d1d570fc16cc403373dbe266bfdeee9b4b24075d8440b97f7056f956970c5
 EBUILD happy-1.18.4.ebuild 1727 SHA256 8e001a1c4ef7e1d28b03d88013982999ba2ed7aae7c62d06a799cbfc5bd26a89 SHA512 06fc3f3f7e10a191d0ca8d5877be657b46a9c1c996e9e23b9ea9332b7af715df1af4adbe71e5a4cd727755c9973a6dbfa08ba3363d2451e7a5d0d41e9f2c6464 WHIRLPOOL 9b37548fc88de170525ed9ce1648681417e4ff1028dc272001610163ec342297eb323409b1a1db202c8ef99b5f9ff01b0c46958b43b56dd38a9d3d40573bee04
 EBUILD happy-1.18.6.ebuild 1372 SHA256 e3d884bb71de39568b6dbac2c1fb17e90397cf4837947ff01b13b479ab44fa7d SHA512 ffc84fa6cc79bdbc7c74b3ab6c29e0915bd2994a75a35515330c244406a0880770492a634b53d1d80dffc984415f7e3b26c1ca1960a541ae5a43e8a52dc350e6 WHIRLPOOL f2ee6555231b40cc38016318931ad10cede0dd73c17f0120cc5251dc7c15419932029725dc7b2002171d47fae7c668a728402f029cea826e07067d3d38ec4e6f
-EBUILD happy-1.18.9.ebuild 1700 SHA256 66c8e5d32d958a1c45daf36fe683f9c35f62c38186e2d7cd96a89dd1945ef1fb SHA512 cc2cec58b3478d7b8d2d1928e7ca80dc6756812902d78e2fc0fc23cc661c619853f94a053f64b509791e534e6bcad4cd4afaf9403ff155204a0c60286c0ee2a5 WHIRLPOOL 39ff63e39faf4f03adf06dae510c4ee3dbc8e8e543c5a70d40edece6c735e1b0f62f37a681feef7389a1091951ad19065bfec18c7e55ea89282d4eb35e46c4b2
-MISC ChangeLog 6683 SHA256 517eee0e87c2b030e71a8ff18c71bdcc0be2836df9c1f31314fcc9142da5bea5 SHA512 c22a59866e9991ca7ad46361faac01ce7b7edb4937f6a51d4c26e4c62b87dc4d206d7c513d25426c95ad1e12c3f599660a01ee9de6409ce48d1be49632d9ccd6 WHIRLPOOL d1433e08d8028d6bacba0741759324b2a9eb078369228d1332b6f55d287466a6238f2c0e516e17a6cc1ead762810090db393dd190d0548c78b4213aadf0d6c59
+EBUILD happy-1.18.9.ebuild 1701 SHA256 7f42fb192937baf8a2d9a11e9385309da81b4ef21c89e25be7ef449c399afaf5 SHA512 c7d3d1aba5eebaa76f913378e5368b100c764cb1f3904af178a4e9b85fd9b345d1fe8fa5e12e877b005095395716a4733599db104f11ef108148ea55a82efaa4 WHIRLPOOL 8b3de9f8ec7ad71d5cdbe88d7ab01bc3f44d2b5ffb378e5902119b8d931487c0998761e1e012b9ed6d1216af06e5ec479321754222bdc2e174db7f34b5092f77
+MISC ChangeLog 6794 SHA256 dd2ac2b2a1bc4d7309b72e53656c5cb3151a3091b4163e48adc4075b88e45e3b SHA512 22e641bcb6c7db878ac0fcb336a91289bb3686265b05fb906620778eb0a1976aaa3629816634015b6a9d2890d499c667d1260f1c72e2f1dab26c57775dbac5c6 WHIRLPOOL 43c3c1748d44925bbed4263a0f2607e201c059602ae9f00445ea7154aa6a300fc774c7346e2cabfb098b935f0152a8c0c315c60e66a4e5ec617e9c90d825db39
 MISC metadata.xml 307 SHA256 ce829be1fc42dd20b0fab8cfda883f3999b32dd93e237db97f5e099e5543828b SHA512 7542056774733c0525e655703f0955c80f5e43afdd34ca4b3154cb0dceb09981fe0ae60296bb198aa96b7f8b1d5edbf8ae65da550fd502733a73308d1306a1f5 WHIRLPOOL 746593885e41cd7b39950755c77b2eaba5a2d129cf891b0ab0a9f86f78a3b23d5304dcbd4523e9a9df171635ac59e2466084ec104ac0c2162c8d4e8dcf1a39ef
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQG83CAAoJEPqDWhW0r/LChPUP/Rhy7xULeekTUZpElcoCQvk3
+U+Tol2E0R+to3Yflmul870jUc25MAow9WW2EOyEZLfjmpj2bbm/0AkcENxvUzkDZ
+zVwfqkU2iKPyFvLMq3RWyVt3yq7F3JbCJC3hhqWcnJI1/IIEoDj6yO9kRMbjWVKO
+IJ/D4yTIYk6+eu0FCQBP8B1Ss7YjU6SGpL9/u9sE++oQGXssr8DeM0EMyDZt6AUu
+FlyupwGZrs/7WzJe6fpuupWYBTkgwWYPFt5sYVy6a2F7ZDIC+/pMQ5e293I/zsmU
+NW2+d72sNqcNDXX82/l66F9dd5ro/3XbeSXXCD1YZWeP0ZlaF80Ybec+3dopEU75
+8sOEfxmIwcTZ04egt2cTUiJrOtiIW6p34IbOZLBsry/uLw7fDWlXymHikX+ZwPx4
+OyfxDdSrOeE+pTcBLGpF1udcOg6qylNdl4F2aJzxP4IsfrbIQrrpgQOZTksL0yER
+4+xhKlBV3FZ80d2WzUHgVpua7FFJDpSH0c4nElKAHRaB7BYEgdjoL/auXIJu46eP
+7ZA0h/SZetLVL0GVAJmu0vAzF8y0S9Niy2GVaKx7O+RazWp02WiefnwOPXoOdjCA
+tPmO6pXgPgsJUzmq9b3Q1b6sfRjzo/Vs2BY6TwDfMyMIuhy3J+fnurWSPrT+eI3D
+kjmGQyRx6/VjdukjoqWm
+=sRFg
+-----END PGP SIGNATURE-----
