@@ -1,9 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX hashed-storage-0.5.7-ghc-7.2.patch 832 SHA256 1cca3f84ff482f688f3a6525040740fce4a3cb50a1998c51abfb70ab37703e37 SHA512 349ff64e37b8e04bebde8ad0db4a2234775f459ee935bdd9d396e2404acf108b07988ff8ab3c7185d7f81a6275aa24d2919922131ca40b224b64a3798beab954 WHIRLPOOL 02627f3c17f6d29ebc13859a6e00fd4dc0324c73fcbdf113bb3a0ffbfef7fb96495615740aaef8d3bc56ac2719a1043be4a51102e7535fe6c5094b665e1fcf7d
 DIST hashed-storage-0.4.13.tar.gz 54534 SHA256 c4e8dbd23469cde19696344f3e56088313ce5ee823e2d89ad2d0cb1fce602b63 SHA512 ed921fe2dcfd302510711ce7aca9c65e8f096d31d36308b6bdbe2eb3d8af0d236080dee24f187a4848a1adaa621ac1654b336f0c09930aff4e95e6ebce0eb58e WHIRLPOOL 82a07318a7ab599dfe71f33205bde76455f7240e88dc23c9ed1016066b63816dc1c924329a3b1b2e9403e329ddb033d430f8d9c01cfa3c2c78740d7e715205cc
 DIST hashed-storage-0.5.7.tar.gz 56699 SHA256 03ecb905887a35ce9dde11ec689b4c272d68994830e0ad74550d6048f5478bfe SHA512 6fd68b173a6dae09baae3ad6bc7835c384c5c2b9fb1090e1191dbfa240e78601453c463b87d06e72fc6a0ee8bef1d8ee886ea1b1fe5eff92c4037cc1fc897c86 WHIRLPOOL 3652ddf6197fff3a0eb64db20ae613f9e93ebd493054666d00baab96496b14d0ddbb3bffa6e61954e5af6c32cd5c20f0842725b3683d16442ca4b3574366af4f
 DIST hashed-storage-0.5.9.tar.gz 56719 SHA256 62c2394d0a127222920211152022e8bc40775ebbdd22fd383715cb32f90796f9 SHA512 4d2463b04fa2d00690267ea88336e02465a5f2166ac2060db04c9ce53e83099cdb46b8f788be4b81c66d018563a2648de2ce810abb6fed8f39c7de104ada6655 WHIRLPOOL 8a3522efdce063cd2348732b2d13b1072ec415dbfdadcdc0f7c6dbb832a519647fdce0981d8ce73927fcd128e0dc8afaeeb25492d684971b7db49998048b75ea
 EBUILD hashed-storage-0.4.13.ebuild 1153 SHA256 aba9582dd081bd9cfa9b7962ea19005469c4dda81eb841ee954a0aaaa5c7b340 SHA512 fdda4714d9d6511774ccf830de83866e09ac4cd366e52d005483f4d6bc6772dd9b7955379288453996a8c83169e96dfe171a567ce3ae984934d1fb4d6cd117ec WHIRLPOOL 747751dd34d7a5096eee3cbc6f5446564fcb517436e6bd3379bcd34602438003693c24fe939ea550b9a6a2013aa1590ab47970d7f4626cea3f924da1b482fa57
 EBUILD hashed-storage-0.5.7.ebuild 1217 SHA256 a6cd14f8b5916133205cd516f875d655970063a08907950eba2a1971ca33e80e SHA512 90059bb59db42a1327c660483ea9f4afd11292590e4fc2a8fe3ceaadbc924eaa6b38bce33bc929ba763d7f6749b171ee6e8768b98fe3e24fbf998f6cf7bddb32 WHIRLPOOL 813b2e0c56f74062ec25d5bb2574e6b42aad3ec3d1588b87407efe111191b82f7b43a27f1a25d2d16f295933cb7e1850916503b57bcf6915a09b765506983652
-EBUILD hashed-storage-0.5.9.ebuild 1254 SHA256 3cfbb675c783a13a4f38a8db1caac74cd73526fbbce6ca151ddd01bdc322488e SHA512 23de09597669bfb5bbbde3db24482fd025ae3c27fcc9495395f4d1be210cbfbfb282ec9ceaabd52a082b12d8a663d9d45a96011c96873af59705a21555c706e7 WHIRLPOOL fd84bd61ba5102d8adee6d0fa87b1580e38656f9fd4e0e50c73f101b9922d6e42b1cbf1697da80b9fcbb4d97963b843c08cf563cfc628e8512716dddff49841d
-MISC ChangeLog 2402 SHA256 af947965782184b248557a994336f90770cad4481fbd3e9bd0a2da6836877ecb SHA512 70bfc0254dcaea12bccebe8edc67265b0a8abd3ec8825c935061879a672b9ed36f282d470aa09c983214d568d37162b06925bfc8bde1b173b6e5e38d7bb66e60 WHIRLPOOL a5f04da561da28122b7bb4bad66cf815f84e4d01deb71a4e3a3dfeebdc508535264991fc5b3eb3ede4a307c0239af6923bdd54299da3c9d67e4cdc14328e34e1
+EBUILD hashed-storage-0.5.9.ebuild 1255 SHA256 9068040434c0ee241e20b4ce3a880e02340e8a90338017bdfe1b3d8d11e030ea SHA512 9fc226a8bd54a7003cdcb9526a2cf5bac44131b153ebe81fe66167550b7ab9f3841c420bbda0750279db146537cbfbd1d8a524112d03078f25d9e5fb7853b175 WHIRLPOOL 0dc6a1a4ccc9d96ee3f9058288203e2623b3f31ad0147aef0721d1d2d9c5c157e7ea484508f95f0cbc75f3438e06e360d5688041131b07223c646a45c3634287
+MISC ChangeLog 2522 SHA256 efd181dcec9ed9d219cafd243910b8d37db25ad987e13f512ef93ee517cca480 SHA512 c9ad3d2527865d430924d9a265c55fc83d9b9383cbcc53897af03b78c59f1b7ea97000d5ecea360d623009ab881ed62dc0f3f913ea35818ca73279c4f3b15d72 WHIRLPOOL bb2d832355100b2a3057a92e3f6b1b1af3e2512ea41bf3b4c88ff2ceb9272463c2d23af8516c758ee9a4413117ae5f7d102754238e9210201c5fe6ecb38039c6
 MISC metadata.xml 654 SHA256 9d07f64131c9cd6b041f3025d72578e6ff2a92adc2f950d2dc81c7dce70d0c22 SHA512 28c0f0e808fb9fecd6284cb979f0aff139cb0a458753be40fb137191a8926f18c4725d7dfc903885b56b8cafae4211ec20c8d168b8d985f0e91e44ffe4870b1c WHIRLPOOL fc93b1d80121414cec1a6449d54c282f20e66b1af139423e875a901861399bf28b9b7a27334910c67e82fac98aad5a161e6d34b30522e58d7c84a5a86ef657cb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iQIcBAEBCAAGBQJQG84GAAoJEPqDWhW0r/LCmi4QAIAAyZ1nUfS+T1UVGG8Zv6HY
+hPpTsPm8HAxpSiYiISwSjPvIsfWCiI43llnhLJwaBYowK0sadXck15ED7ZnF4R1P
+LIeska7KoHdEIOboXbM4Li8ZcvmfVBpWeTt7IA+iP0vntz+4Krgizfs3qIxXpa70
+Fqd+gmrhhequLu1taMsH+YJf1lUEtOyh8a/B/vanX9O9Ad3ji35AGMK9MF5SCx5d
+y9ihqKuXkGdyaPzWjAKo5mdFWljVwBGC5VaLCI3DMfQhaY0v1B4pOC3Mddci3AFB
+K2gHkbl8yNZS54RHSsn24WWEpueb8QUXuJvEuw0ih9a3lyaW8o6rrT6MW58z8xg2
+uS7yR1WIaBUxXKzDQwDB9t5qVkhQ1JDJsPx2yI+DBYvsSdFyY1clBCOn/8VrgcNH
+RNq45OJBG3Yby1cMp+f7yGoGwpAOJj/2bXDWXD+TSy4G6tjw6m1npwymwnsIe30K
+1XzviiQqWpWRaRn4fW1u1kJtfZOkt1hKyIyuVtrhA56RPR9lxsSV9nZSXImuF6AC
+KD47RNMZZsU0omLMB82qTaZdiAwyfurianEM2f8EoMoKC4looNi2IZR4btEnbDaM
+CZic57ng8UAR9J2t1L4uhtGnqeRUH3HIz8BWQZKrLP0GTOw8xeCVFWeDr3nqxI9v
+2SWawbbn+YFz/KPVWPye
+=IB45
+-----END PGP SIGNATURE-----
