@@ -1,6 +1,9 @@
 # ChangeLog for dev-haskell/glut
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-haskell/glut/ChangeLog,v 1.14 2012/06/02 12:17:28 gienah Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-haskell/glut/ChangeLog,v 1.15 2012/08/03 13:07:38 hwoarang Exp $
+
+  03 Aug 2012; Markos Chandras <hwoarang@gentoo.org> glut-2.1.1.2.ebuild:
+  Stable on amd64 wrt bug #418695
 
 *glut-2.3.0.0 (02 Jun 2012)
 
@@ -61,4 +64,3 @@
   09 Jul 2007; Duncan Coutts <dcoutts@gentoo.org> +metadata.xml,
   +glut-2.0.ebuild, +glut-2.0-r1.ebuild, +glut-2.1.1.ebuild:
   Initial versions.
-
